--- a/李嘉枢/简历.html
+++ b/李嘉枢/简历.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>李嘉枢 - 金融分析师简历</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="简历.css">
     <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -128,6 +128,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="简历.js"></script>
 </body>
 </html>
