--- a/徐弘鑫/4-26/index.html
+++ b/徐弘鑫/4-26/index.html
@@ -8,9 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        /* CSS 部分将在下面单独提供 */
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 导航栏 -->
@@ -365,8 +363,8 @@
         </div>
     </footer>
 
-    <script>
-        // JavaScript 部分将在下面单独提供
-    </script>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
